--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ logo: /assets/img/logo.png
 
 title: "Data Visualization (UPC)"
 description: "Website of the subject<br>Degree in Bioinformatics (UPC)"
+
+exclude:
+  - "*.Rmd"
+  
