--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,5 @@ logo: /assets/img/logo.png
 title: "Data Visualization (UPC)"
 description: "Website of the subject<br>Degree in Bioinformatics (UPC)"
 
-exclude:
-  - "_rmd"
+exclude: ['*.Rmd']
   
